--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                     <p class="titulo">PERFIL</p>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis fugit voluptas laudantium?
                         Repellendus laudantium aliquam, quidem ullam pariatur ex similique. Eligendi distinctio quod
-                        perspiciatis molestias porro sed itaque repellat doloremque. </p>
+                        perspiciatis molestias porro sed itaque repellat doloremque.
+                    ascicbcalcnslkcnblkscnls
+                    canlcsn </p>
                 </section>
                 
                 <section>
@@ -62,7 +64,7 @@
                 </div>
 
                 <div class="cuerpo">
-                    <p>Nombre</p>
+                    <p>EDUCACION</p>
                     <div class="sub">
                         <div class="fecha">
                             <p>nassnsnlkn</p>
@@ -75,13 +77,15 @@
                             </div>
                         </div>
                         <div class="descripción">
-
+                            <p>nassnsnlknacacscsacssaccsasasacsdcadcscbsjdbkbdvkbksdvbkbdsvkbdsjkdvbksdb kbkvbsdvbskvd</p>
+                            <p>nassnsnlknsacscacscsacsc c ccscsdvnkdvlknsdvsacscsa</p>
+                            <p>nassnsnlknasccsacacacascascads</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="cuerpo">
-                    <p>Nombre</p>
+                    <p>ESPERIENIA</p>
                     <div class="sub">
                         <div class="fecha">
                             <p>nassnsnlkn</p>
@@ -94,12 +98,14 @@
                             </div>
                         </div>
                         <div class="descripción">
-
+                            <p>nassnsnlknacacscsacssaccsasasacsdcadcscbsjdbkbdvkbksdvbkbdsvkbdsjkdvbksdb kbkvbsdvbskvd</p>
+                            <p>nassnsnlknsacscacscsacsc c ccscsdvnkdvlknsdvsacscsa</p>
+                            <p>nassnsnlknasccsacacacascascads</p>
                         </div>
                     </div>
                 </div>
                 <div class="cuerpo">
-                    <p>Nombre</p>
+                    <p>OTROS</p>
                     <div class="sub">
                         <div class="fecha">
                             <p>nassnsnlkn</p>
@@ -112,14 +118,19 @@
                             </div>
                         </div>
                         <div class="descripción">
-
+                            <p>nassnsnlknacacscsacssaccsasasacsdcadcscbsjdbkbdvkbksdvbkbdsvkbdsjkdvbksdb kbkvbsdvbskvd</p>
+                            <p>nassnsnlknsacscacscsacsc c ccscsdvnkdvlknsdvsacscsa</p>
+                            <p>nassnsnlknasccsacacacascascads</p>
                         </div>
                     </div>
                 </div>
                 <div class="cierre">
                     <p>CONOCIMIENTOS</p>
                     <div class="iconos">
-                        <image src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/JavaScript-logo.png/800px-JavaScript-logo.png" alt="javascript"/>
+                        <image class="imagen"src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/JavaScript-logo.png/800px-JavaScript-logo.png" alt="javascript"/>
+                        <image class="imagen"src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/JavaScript-logo.png/800px-JavaScript-logo.png" alt="javascript"/>
+                        <image class="imagen"src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/JavaScript-logo.png/800px-JavaScript-logo.png" alt="javascript"/>
+                        <image class="imagen"src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/JavaScript-logo.png/800px-JavaScript-logo.png" alt="javascript"/>
                     </div>
                 </div>
 
