--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
                 <div class="cuerpo">
                     <p>EDUCACION</p>
                     <div class="sub">
-                        <div class="fecha">
+                        <div class="componente">
+                            <p class="centro" data-fecha="16-02-2022" data-description="Holansakackacskak"></p>
+                        </div>
+                        <!-- <div class="fecha">
                             <p>nassnsnlkn</p>
                             <p>nassnsnlkn</p>
                             <p>nassnsnlkn</p>
@@ -80,7 +83,8 @@
                             <p>nassnsnlknacacscsacssaccsasasacsdcadcscbsjdbkbdvkbksdvbkbdsvkbdsjkdvbksdb kbkvbsdvbskvd</p>
                             <p>nassnsnlknsacscacscsacsc c ccscsdvnkdvlknsdvsacscsa</p>
                             <p>nassnsnlknasccsacacacascascads</p>
-                        </div>
+                        </div> -->
+
                     </div>
                 </div>
 
